--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
     "# Function to add two numbers \n",
     "def add(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 + num2"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "# Function to subtract two numbers \n",
     "def subtract(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 - num2"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "# Function to multiply two numbers\n",
     "def multiply(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 * num2"
    ]
   },
   {
@@ -96,7 +96,7 @@
     "# Function to divide two numbers\n",
     "def divide(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 / num2"
    ]
   },
   {
@@ -109,29 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please select operation -\n",
-      "1. Add\n",
-      "2. Subtract\n",
-      "3. Multiply\n",
-      "4. Divide\n",
-      "\n",
-      "Select operations form 1, 2, 3, 4 :1\n",
-      "Enter first number: 2\n",
-      "Enter second number: 3\n",
-      "2 + 3 = 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print user menu \n",
-    "\n",
+    "operation_input = input('''Please select operation -\n",
+    "1. Add\n",
+    "2. Subtract\n",
+    "3. Multiply\n",
+    "4. Divide\n",
+    "''')\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
@@ -266,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
