--- a/index.ipynb
+++ b/index.ipynb
@@ -109,9 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please select operation -\n",
+      "1. Add\n",
+      "2. Subtract\n",
+      "3. Multiply\n",
+      "4. Divide\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# Print user menu \n",
     "operation_input = input('''Please select operation -\n",
@@ -120,6 +133,7 @@
     "3. Multiply\n",
     "4. Divide\n",
     "''')\n",
+    "\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
