Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,6 +134,7 @@
     "4. Divide\n",
     "''')\n",
     "\n",
+    "if opertaio\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
