--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,9 @@
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
-    "operations = {1: add, 2: subtract, 3: multiply, 4:divide}\n",
+    "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
+    "\n",
+    "inpu\n",
     "# Based on operation, pass the two numbers to respective function\n",
     "# Print the output in a nice manner\n",
     "# Print \"Invalid input\" if an unexpected character is seen in input\n",
