--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
     "\n",
-    "inpu\n",
+    "input()\n",
     "# Based on operation, pass the two numbers to respective function\n",
     "# Print the output in a nice manner\n",
     "# Print \"Invalid input\" if an unexpected character is seen in input\n",
