Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,15 @@
    ],
    "source": [
     "# Print user menu \n",
-    "operation_input = input('''Please select operation -\n",
+    "\n",
+    "print('''Please select operation -\n",
     "1. Add\n",
     "2. Subtract\n",
     "3. Multiply\n",
     "4. Divide\n",
     "''')\n",
+    "\n",
+    "operation_input = input()\n",
     "\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
