Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     "4. Divide\n",
     "''')\n",
     "\n",
-    "operation_input = input()\n",
+    "operation_input = input('Select operations form 1, 2, 3, 4 : ')\n",
     "\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
