--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "''')\n",
     "\n",
     "operation_input = input('Select operations form 1, 2, 3, 4 : ')\n",
-    "\n",
+    "first_num = input()\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
     "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
