--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "operation_input = input('Select operations form 1, 2, 3, 4 : ')\n",
     "first_num = input('Enter first number: ')\n",
-    "\n",
+    "second_num = input('Enter first number: ')\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
     "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
