Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,8 @@
     "operation_input = input('Select operations form 1, 2, 3, 4 : ')\n",
     "\n",
     "first_num = input('Enter first number: ')\n",
-    "if type(first_num) \n",
+    "if type(first_num) != int:\n",
+    "    print('inval')\n",
     "second_num = input('Enter second number: ')\n",
     "\n",
     "\n",
