Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "first_num = input('Enter first number: ')\n",
     "if type(first_num) != int:\n",
-    "    print('inval')\n",
+    "    print(f'{}')\n",
     "second_num = input('Enter second number: ')\n",
     "\n",
     "\n",
