--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "first_num = input('Enter first number: ')\n",
     "if type(first_num) != int:\n",
-    "    print(f'{}')\n",
+    "    print(f'{first_num} not a valid number')\n",
     "second_num = input('Enter second number: ')\n",
     "\n",
     "\n",
