--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,8 @@
     "if type(first_num) != int:\n",
     "    print(f'{first_num} not a valid number')\n",
     "second_num = input('Enter second number: ')\n",
-    "\n",
+    "if type(first_num) != int:\n",
+    "    print(f'{first_num} not a valid number')\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
