Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,8 +141,9 @@
     "if type(first_num) != int:\n",
     "    print(f'{first_num} not a valid number')\n",
     "second_num = input('Enter second number: ')\n",
-    "if type(first_num) != int:\n",
-    "    print(f'{first_num} not a valid number')\n",
+    "\n",
+    "if type(second_num) != int:\n",
+    "    print(f'{second_num} not a valid number')\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
