--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,9 @@
     "if type(second_num) != int:\n",
     "    print(f'{second_num} not a valid number')\n",
     "    \n",
+    "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
     "\n",
+    "oper\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
