--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
     "    \n",
     "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
     "\n",
-    "oper\n",
+    "operations[operation_input]\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
