Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
       "2. Subtract\n",
       "3. Multiply\n",
       "4. Divide\n",
-      "6\n"
+      "\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
     "    \n",
     "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
     "\n",
-    "operations[operation_input]\n",
+    "operations[operation_input](first_num, second_num)\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
     "\n",
