--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,10 @@
       "2. Subtract\n",
       "3. Multiply\n",
       "4. Divide\n",
-      "\n"
+      "\n",
+      "Select operations form 1, 2, 3, 4 : 1\n",
+      "Enter first number: 2\n",
+      "2 not a valid number\n"
      ]
     }
    ],
