Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,22 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(4)"
+    "type(4) == int"
    ]
   },
   {
