Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "operation_input = input('Select operations form 1, 2, 3, 4 : ')\n",
     "\n",
-    "first_num = input('Enter first number: ')\n",
+    "first_num = int(input('Enter first number: '))\n",
     "\n",
     "if type(first_num) != int:\n",
     "    print(f'{first_num} not a valid number')\n",
