--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,20 +122,7 @@
       "3. Multiply\n",
       "4. Divide\n",
       "\n",
-      "Select operations form 1, 2, 3, 4 : 1\n",
-      "Enter first number: 2\n",
-      "Enter second number: 2\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-f055112b960c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0moperations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0madd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msubtract\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmultiply\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdivide\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0moperations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moperation_input\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;31m# Take input from the user for operation , followed by numbers.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: '1'"
+      "Select operations form 1, 2, 3, 4 : 1\n"
      ]
     }
    ],
@@ -161,7 +148,7 @@
     "if type(second_num) != int:\n",
     "    print(f'{second_num} not a valid number')\n",
     "    \n",
-    "operations = {1: add, 2: subtract, 3: multiply, 4: divide}\n",
+    "operations = {'1': add, '2': subtract, '3': multiply, '4': divide}\n",
     "\n",
     "operations[operation_input](first_num, second_num)\n",
     "\n",
