Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,20 @@
       "3. Multiply\n",
       "4. Divide\n",
       "\n",
-      "Select operations form 1, 2, 3, 4 : 1\n"
+      "Select operations form 1, 2, 3, 4 : 1\n",
+      "Enter first number: 2\n",
+      "Enter second number: 2\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
